--- a/DnD Helper.ipynb
+++ b/DnD Helper.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,14 +133,19 @@
     "            \"Io\",\"I\",\"LLe\",\"LLy\",\"Ma\",\"Teg\",\"Teth\",\"Ter\"]\n",
     "    \n",
     "    #list of female first name suffixes\n",
-    "    lady = ['wynn','tha']\n",
+    "    lady = ['wynn','tha','rianna','aste','nua','rynna','rel','lynn','ilia','na','leth','shanna',\n",
+    "            'lenna','sial','iele','alee','nia','vara','lathe','enneth','riel','nairra','laqui',\n",
+    "            'astra','ava','thia','ania']\n",
     "    \n",
     "    #list of male first name suffixes\n",
-    "    gent = ['las','erth']\n",
+    "    gent = ['las','erth','dran','lar','amil','annis','eiro','ust','ill','ric','alis','dan','van',\n",
+    "           'inndan','darai','ian','mo','meral','ral','llios', 'illos','cian','dartis','eilas','ren',\n",
+    "           'rion','mior','liss','len','rivol','ris']\n",
     "    \n",
     "    #lists of surname in syllables\n",
-    "    sur1 = ['Moon','Sun','Star']\n",
-    "    sur2 = ['dancer','speaker','ranger']\n",
+    "    sur1 = ['Moon','Sun','Star','Gem','Diamond','Silver', 'Night','Gold','Oaken' ,'Wind','Ruby','Sapphire']\n",
+    "    sur2 = ['dancer','speaker','ranger','flower','dew','whisper','frond','breeze',\n",
+    "            'petal','heel','brook','leaf','river','sea','shine']\n",
     "    \n",
     "    #creating last name\n",
     "    last = sur1[random.randrange(0,len(sur1),1)]+sur2[random.randrange(0,len(sur2),1)]\n",
@@ -163,12 +168,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def gen_name(race,gender):\n",
-    "    races=['dwarf', 'elf']\n",
+    "def human_name(gender, sub=rand):\n",
+    "    \n",
+    "    #list of subraces\n",
+    "    subraces = ['Calishite', 'Chondathan','Damaran','Illuskan','Mulan','Rashemi','Shou','Tethyrian','Turami']\n",
+    "    \n",
+    "    #lists of female first names by subrace\n",
+    "    lady = {'Calishite':[], \n",
+    "            'Chondathan':[],\n",
+    "            'Damaran':[],\n",
+    "            'Illuskan':[],\n",
+    "            'Mulan':[],\n",
+    "            'Rashemi':[],\n",
+    "            'Shou':[],\n",
+    "            'Tethyrian':[],\n",
+    "            'Turami':[]}\n",
+    "    \n",
+    "    #lists of male first names by subrace\n",
+    "    gent = {'Calishite':[], \n",
+    "            'Chondathan':[],\n",
+    "            'Damaran':[],\n",
+    "            'Illuskan':[],\n",
+    "            'Mulan':[],\n",
+    "            'Rashemi':[],\n",
+    "            'Shou':[],\n",
+    "            'Tethyrian':[],\n",
+    "            'Turami':[]}\n",
+    "    \n",
+    "    #lists of surnames by subrace\n",
+    "    sur = {'Calishite':[], \n",
+    "            'Chondathan':[],\n",
+    "            'Damaran':[],\n",
+    "            'Illuskan':[],\n",
+    "            'Mulan':[],\n",
+    "            'Rashemi':[],\n",
+    "            'Shou':[],\n",
+    "            'Tethyrian':[],\n",
+    "            'Turami':[]}\n",
+    "    \n",
+    "    #creating last name\n",
+    "    last = sur1[random.randrange(0,len(sur1),1)]+sur2[random.randrange(0,len(sur2),1)]\n",
+    "    \n",
+    "    if gender == 'f':\n",
+    "        #creating first name\n",
+    "        n1 = lady1[random.randrange(0,len(lady1),1)]\n",
+    "        n2 = lady2[random.randrange(0,len(lady2),1)]\n",
+    "        #print full name\n",
+    "        print(\"{}{} {}\".format(n1, n2,last))\n",
+    "        \n",
+    "    if gender == 'm':\n",
+    "        #creating first name\n",
+    "        n3 = gent1[random.randrange(0,len(gent1),1)]\n",
+    "        n4 = gent2[random.randrange(0,len(gent2),1)]\n",
+    "        #print fullname\n",
+    "        print(\"{}{} {}\".format(n3, n4,last))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def gen_name(race, gender):\n",
+    "    races=['dwarf', 'elf', 'human']\n",
     "    \n",
     "    if race not in races:\n",
     "        print(\"That race is not yet supported.\")\n",
@@ -178,25 +245,35 @@
     "            dwarf_name(gender)\n",
     "            \n",
     "        if race == 'elf':\n",
-    "            elf_name(gender)"
+    "            elf_name(gender)\n",
+    "            \n",
+    "        if race == 'human':\n",
+    "            human_name(gender)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "LLyerth Sunspeaker\n"
+      "Halrynna Winddew\n"
      ]
     }
    ],
    "source": [
-    "gen_name('elf','m')"
+    "gen_name('elf','f')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
