human input test

--- a/DnD Helper.ipynb
+++ b/DnD Helper.ipynb
@@ -175,40 +175,40 @@
     "def human_name(gender, sub=rand):\n",
     "    \n",
     "    #list of subraces\n",
-    "    subraces = ['Calishite', 'Chondathan','Damaran','Illuskan','Mulan','Rashemi','Shou','Tethyrian','Turami']\n",
+    "    subraces = ['Calishite', 'Chondathan']#,'Damaran','Illuskan','Mulan','Rashemi','Shou','Tethyrian','Turami']\n",
     "    \n",
     "    #lists of female first names by subrace\n",
-    "    lady = {'Calishite':[], \n",
-    "            'Chondathan':[],\n",
-    "            'Damaran':[],\n",
-    "            'Illuskan':[],\n",
-    "            'Mulan':[],\n",
-    "            'Rashemi':[],\n",
-    "            'Shou':[],\n",
-    "            'Tethyrian':[],\n",
-    "            'Turami':[]}\n",
+    "    lady = {'Calishite':['Atala','Ceidil','Hama','Jasmal','Meilil','Seipore', 'Yasheira','Zasheida'], \n",
+    "            'Chondathan':['Arveene','Esvele','Jhessail', 'Kerri','Lureene','Miri','Rowan','Shandri','Tessele']}#,\n",
+    "     #       'Damaran':[],\n",
+    "     #       'Illuskan':[],\n",
+    "     #       'Mulan':[],\n",
+    "     #       'Rashemi':[],\n",
+    "     #       'Shou':[],\n",
+    "     #       'Tethyrian':[],\n",
+    "     #       'Turami':[]}\n",
     "    \n",
     "    #lists of male first names by subrace\n",
-    "    gent = {'Calishite':[], \n",
-    "            'Chondathan':[],\n",
-    "            'Damaran':[],\n",
-    "            'Illuskan':[],\n",
-    "            'Mulan':[],\n",
-    "            'Rashemi':[],\n",
-    "            'Shou':[],\n",
-    "            'Tethyrian':[],\n",
-    "            'Turami':[]}\n",
+    "    gent = {'Calishite':['Aseir','Bardeid','Haseid','Jasnah','Khemed','Mehmen', 'Wessam', 'Sudeiman', 'Zasheir'], \n",
+    "            'Chondathan':['Darvin','Dorn','Evendur','Gorstag','Grim','Helm','Malark','Morn','Randal','Stedd']}#,\n",
+    "      #      'Damaran':[],\n",
+    "      #      'Illuskan':[],\n",
+    "      #      'Mulan':[],\n",
+    "      #      'Rashemi':[],\n",
+    "      #      'Shou':[],\n",
+    "      #      'Tethyrian':[],\n",
+    "      #      'Turami':[]}\n",
     "    \n",
     "    #lists of surnames by subrace\n",
-    "    sur = {'Calishite':[], \n",
-    "            'Chondathan':[],\n",
-    "            'Damaran':[],\n",
-    "            'Illuskan':[],\n",
-    "            'Mulan':[],\n",
-    "            'Rashemi':[],\n",
-    "            'Shou':[],\n",
-    "            'Tethyrian':[],\n",
-    "            'Turami':[]}\n",
+    "    sur = {'Calishite':['Basha','Badawi','Dumein','Jassan','Khalid','Mostana','Pashar','Rein'], \n",
+    "            'Chondathan':['Amblecrown','Buckman','Dundragon','Evenwood','Greycastle','Tallstag']}#,\n",
+    "       #     'Damaran':[],\n",
+    "       #     'Illuskan':[],\n",
+    "       #     'Mulan':[],\n",
+    "       #     'Rashemi':[],\n",
+    "       #     'Shou':[],\n",
+    "       #     'Tethyrian':[],\n",
+    "       #     'Turami':[]}\n",
     "    \n",
     "    #creating last name\n",
     "    last = sur1[random.randrange(0,len(sur1),1)]+sur2[random.randrange(0,len(sur2),1)]\n",
