human name generator done

--- a/DnD Helper.ipynb
+++ b/DnD Helper.ipynb
@@ -168,73 +168,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def human_name(gender, sub=rand):\n",
+    "def human_name(gender, sub=None):\n",
     "    \n",
     "    #list of subraces\n",
-    "    subraces = ['Calishite', 'Chondathan']#,'Damaran','Illuskan','Mulan','Rashemi','Shou','Tethyrian','Turami']\n",
+    "    subraces = ['Calishite', 'Chondathan','Illuskan','Damaran','Mulan','Rashemi','Shou','Tethyrian','Turami']\n",
     "    \n",
     "    #lists of female first names by subrace\n",
     "    lady = {'Calishite':['Atala','Ceidil','Hama','Jasmal','Meilil','Seipore', 'Yasheira','Zasheida'], \n",
-    "            'Chondathan':['Arveene','Esvele','Jhessail', 'Kerri','Lureene','Miri','Rowan','Shandri','Tessele']}#,\n",
-    "     #       'Damaran':[],\n",
-    "     #       'Illuskan':[],\n",
-    "     #       'Mulan':[],\n",
-    "     #       'Rashemi':[],\n",
-    "     #       'Shou':[],\n",
-    "     #       'Tethyrian':[],\n",
-    "     #       'Turami':[]}\n",
+    "            'Chondathan':['Arveene','Esvele','Jhessail', 'Kerri','Lureene','Miri','Rowan','Shandri','Tessele'],\n",
+    "            'Damaran':['Alethra','Kara','Katerinn','Mara','Natali','Olma','Tana','Zora'],\n",
+    "            'Illuskan':['Amafrey','Betha','Cefrey','Kethra', 'Marina','Olja','Silifrey','Westra'],\n",
+    "            'Mulan':['Arizima','Chathi','Nephis','Nulara','Murithi','Sefris','Thola','Umara','Zolis'],\n",
+    "            'Rashemi':['Fyevarra','Hulmarra','Immith','Imzel','Navarra','Shevarra','Tammith','Yuldra'],\n",
+    "            'Shou':['Bai','Chao','Jia','Lei','Mei','Qiao','Shui','Tai'],\n",
+    "            'Tethyrian':['Arveene','Esvele','Jhessail', 'Kerri','Lureene','Miri','Rowan','Shandri','Tessele'],\n",
+    "            'Turami':['Balama','Dona','Faila','Jalana','Luisa','Marta','Quara','Selise','Vonda']}\n",
     "    \n",
     "    #lists of male first names by subrace\n",
     "    gent = {'Calishite':['Aseir','Bardeid','Haseid','Jasnah','Khemed','Mehmen', 'Wessam', 'Sudeiman', 'Zasheir'], \n",
-    "            'Chondathan':['Darvin','Dorn','Evendur','Gorstag','Grim','Helm','Malark','Morn','Randal','Stedd']}#,\n",
-    "      #      'Damaran':[],\n",
-    "      #      'Illuskan':[],\n",
-    "      #      'Mulan':[],\n",
-    "      #      'Rashemi':[],\n",
-    "      #      'Shou':[],\n",
-    "      #      'Tethyrian':[],\n",
-    "      #      'Turami':[]}\n",
+    "            'Chondathan':['Darvin','Dorn','Evendur','Gorstag','Grim','Helm','Malark','Morn','Randal','Stedd'],\n",
+    "            'Damaran':['Bor','Fodel','Glar','Grigor','Igan','Ivor','Kosef','Mival','Orel','Pavel','Sergor'],\n",
+    "            'Illuskan':['Ander','Blath','Bran','Frath','Geth','Lander','Luth','Malcer','Stor','Taman','Urth'],\n",
+    "            'Mulan':['Aoth','Bareris','Ehput-Ki','Kethoth','Mumed','Ramas','So-Kehur','Thazar-De','Urthur'],\n",
+    "            'Rashemi':['Borivik','Faurgar','Jandar','Kanithar','Madislak','Ralmevik','Shaumar','Vladislak'],\n",
+    "            'Shou':['An','Chen','Chi','Fai','Jiang','Jun','Lian','Long','Meng','On','Shan','Shui','Tai','Var'],\n",
+    "            'Tethyrian':['Darvin','Dorn','Evendur','Gorstag','Grim','Helm','Malark','Morn','Randal','Stedd'],\n",
+    "            'Turami':['Anton','Diero','Marcon','Pieron','Rimardo','Romero','Salazar','Umbero']}\n",
     "    \n",
     "    #lists of surnames by subrace\n",
     "    sur = {'Calishite':['Basha','Badawi','Dumein','Jassan','Khalid','Mostana','Pashar','Rein'], \n",
-    "            'Chondathan':['Amblecrown','Buckman','Dundragon','Evenwood','Greycastle','Tallstag']}#,\n",
-    "       #     'Damaran':[],\n",
-    "       #     'Illuskan':[],\n",
-    "       #     'Mulan':[],\n",
-    "       #     'Rashemi':[],\n",
-    "       #     'Shou':[],\n",
-    "       #     'Tethyrian':[],\n",
-    "       #     'Turami':[]}\n",
-    "    \n",
-    "    #creating last name\n",
-    "    last = sur1[random.randrange(0,len(sur1),1)]+sur2[random.randrange(0,len(sur2),1)]\n",
-    "    \n",
-    "    if gender == 'f':\n",
-    "        #creating first name\n",
-    "        n1 = lady1[random.randrange(0,len(lady1),1)]\n",
-    "        n2 = lady2[random.randrange(0,len(lady2),1)]\n",
-    "        #print full name\n",
-    "        print(\"{}{} {}\".format(n1, n2,last))\n",
+    "            'Chondathan':['Amblecrown','Buckman','Dundragon','Evenwood','Greycastle','Tallstag'],\n",
+    "            'Damaran':['Bersk','Chernin','Dotsk','Kulenov','Marsk','Nemetsk','Shemov','Starag','Kuzko'],\n",
+    "            'Illuskan':['Brightwood','Helder','Lannister','Hornraven','Lackman','Stormwind','Windrivver'],\n",
+    "            'Mulan':['Ankhalab','Anskuld','Fezim','Haphet','Nathandem','Sepret','Uuthrakt'],\n",
+    "            'Rashemi':['Chergoba','Dyernina','Iltazyara','Murnyethara','Stayanoga','Ulmokina','Zahera'],\n",
+    "            'Shou':['Chien','Huang','Kao','Kung','Lao','Ling','Mei','Pin','Shin','Sum','Faa','Tan','Wan'],\n",
+    "            'Tethyrian':['Amblecrown','Buckman','Dundragon','Evenwood','Greycastle','Tallstag'],\n",
+    "            'Turami':['Agosto','Astorio','Calabra','Domine','Falone','Marivaldi','Pisacar','Ramondo']}\n",
+    " \n",
+    "    if sub in subraces:\n",
+    "        #creating last name\n",
+    "        last1 = sur[sub][random.randrange(0,len(sur[sub]),1)]\n",
     "        \n",
-    "    if gender == 'm':\n",
-    "        #creating first name\n",
-    "        n3 = gent1[random.randrange(0,len(gent1),1)]\n",
-    "        n4 = gent2[random.randrange(0,len(gent2),1)]\n",
-    "        #print fullname\n",
-    "        print(\"{}{} {}\".format(n3, n4,last))"
+    "        if gender == 'f':\n",
+    "            #creating first name\n",
+    "            n1 = lady[sub][random.randrange(0,len(lady[sub]),1)]\n",
+    "            #print full name\n",
+    "            print(\"{} {}\".format(n1,last1))\n",
+    "\n",
+    "        if gender == 'm':\n",
+    "            #creating first name\n",
+    "            n2 = gent[sub][random.randrange(0,len(gent[sub]),1)]\n",
+    "            #print fullname\n",
+    "            print(\"{} {}\".format(n2,last1))\n",
+    "    \n",
+    "    elif sub == None:\n",
+    "        \n",
+    "        subs = subraces[random.randrange(0,len(subraces),1)]\n",
+    "        \n",
+    "        #creating last name\n",
+    "        last2 = sur[subs][random.randrange(0,len(sur[sub]),1)]\n",
+    "\n",
+    "        if gender == 'f':\n",
+    "            #creating first name\n",
+    "            n3 = lady[subs][random.randrange(0,len(lady[sub]),1)]\n",
+    "            #print full name\n",
+    "            print(\"{} {}\".format(n3,last2))\n",
+    "\n",
+    "        if gender == 'm':\n",
+    "            #creating first name\n",
+    "            n4 = gent[subs][random.randrange(0,len(gent[sub]),1)]\n",
+    "            #print fullname\n",
+    "            print(\"{} {}\".format(n4,last2))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def gen_name(race, gender):\n",
+    "def gen_name(race, gender, hu_sub=None):\n",
     "    races=['dwarf', 'elf', 'human']\n",
     "    \n",
     "    if race not in races:\n",
@@ -248,32 +266,8 @@
     "            elf_name(gender)\n",
     "            \n",
     "        if race == 'human':\n",
-    "            human_name(gender)"
+    "            human_name(gender, sub=hu_sub)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Halrynna Winddew\n"
-     ]
-    }
-   ],
-   "source": [
-    "gen_name('elf','f')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
