--- a/DnD Helper.ipynb
+++ b/DnD Helper.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {
     "scrolled": false
    },
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,6 +106,7 @@
     "        n2 = lady2[random.randrange(0,len(lady2),1)]\n",
     "        #print full name\n",
     "        print(\"{}{} {}\".format(n1, n2,last))\n",
+    "        return [n1+n2, last]\n",
     "        \n",
     "    if gender == 'm':\n",
     "        #creating first name\n",
@@ -113,6 +114,7 @@
     "        n4 = gent2[random.randrange(0,len(gent2),1)]\n",
     "        #print fullname\n",
     "        print(\"{}{} {}\".format(n3, n4,last))\n",
+    "        return [n3+n4, last]\n",
     "    \n",
     "    \n",
     "    \n",
@@ -121,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,18 +159,20 @@
     "        n2 = lady[random.randrange(0,len(lady),1)]\n",
     "        #print full name\n",
     "        print(\"{}{} {}\".format(n1, n2,last))\n",
+    "        return [n1+n2, last]\n",
     "        \n",
     "    if gender == 'm':\n",
     "        #creating first name\n",
     "        n3 = pref[random.randrange(0,len(pref),1)]\n",
     "        n4 = gent[random.randrange(0,len(gent),1)]\n",
     "        #print fullname\n",
-    "        print(\"{}{} {}\".format(n3, n4,last))"
+    "        print(\"{}{} {}\".format(n3, n4,last))\n",
+    "        return [n3+n4, last]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,41 +223,73 @@
     "            n1 = lady[sub][random.randrange(0,len(lady[sub]),1)]\n",
     "            #print full name\n",
     "            print(\"{} {}\".format(n1,last1))\n",
+    "            return [n1, last1]\n",
     "\n",
     "        if gender == 'm':\n",
     "            #creating first name\n",
     "            n2 = gent[sub][random.randrange(0,len(gent[sub]),1)]\n",
     "            #print fullname\n",
     "            print(\"{} {}\".format(n2,last1))\n",
+    "            return [n2, last1]\n",
     "    \n",
     "    elif sub == None:\n",
     "        \n",
     "        subs = subraces[random.randrange(0,len(subraces),1)]\n",
     "        \n",
     "        #creating last name\n",
-    "        last2 = sur[subs][random.randrange(0,len(sur[sub]),1)]\n",
+    "        last2 = sur[subs][random.randrange(0,len(sur[subs]),1)]\n",
     "\n",
     "        if gender == 'f':\n",
     "            #creating first name\n",
-    "            n3 = lady[subs][random.randrange(0,len(lady[sub]),1)]\n",
+    "            n3 = lady[subs][random.randrange(0,len(lady[subs]),1)]\n",
     "            #print full name\n",
     "            print(\"{} {}\".format(n3,last2))\n",
+    "            return [n3, last2]\n",
     "\n",
     "        if gender == 'm':\n",
     "            #creating first name\n",
-    "            n4 = gent[subs][random.randrange(0,len(gent[sub]),1)]\n",
+    "            n4 = gent[subs][random.randrange(0,len(gent[subs]),1)]\n",
     "            #print fullname\n",
-    "            print(\"{} {}\".format(n4,last2))"
+    "            print(\"{} {}\".format(n4,last2))\n",
+    "            return [n4, last2]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def halfelf_name(gender):\n",
+    "    #race basis for naming \n",
+    "    halves = ['elf','human']\n",
+    "    #random base for first and last names\n",
+    "    half1 = halves[random.randrange(0,len(halves),1)]\n",
+    "    half2 = halves[random.randrange(0,len(halves),1)]\n",
+    "    \n",
+    "    #last name generator\n",
+    "    if half1 == 'elf':\n",
+    "        last = elf_name(gender)[1]\n",
+    "    elif half1 == 'human':\n",
+    "        last = human_name(gender, sub=None)[1]\n",
+    "        \n",
+    "    #first name generator\n",
+    "    if half2 == 'elf':\n",
+    "        first = elf_name(gender)[0]\n",
+    "    elif half2 == 'human':\n",
+    "        first = human_name(gender, sub=None)[0]\n",
+    "        \n",
+    "    print(\"{} {}\".format(first, last))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "def gen_name(race, gender, hu_sub=None):\n",
-    "    races=['dwarf', 'elf', 'human']\n",
+    "    races=['dwarf', 'elf', 'human', 'half-elf']\n",
     "    \n",
     "    if race not in races:\n",
     "        print(\"That race is not yet supported.\")\n",
@@ -266,7 +302,27 @@
     "            elf_name(gender)\n",
     "            \n",
     "        if race == 'human':\n",
-    "            human_name(gender, sub=hu_sub)"
+    "            human_name(gender, sub=hu_sub)\n",
+    "            \n",
+    "        if race == 'half-elf':\n",
+    "            halfelf_name(gender)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Faila Pisacar\n"
+     ]
+    }
+   ],
+   "source": [
+    "gen_name('human','f')"
    ]
   },
   {
