fixed print issue

--- a/DnD Helper.ipynb
+++ b/DnD Helper.ipynb
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,16 +105,16 @@
     "        n1 = lady1[random.randrange(0,len(lady1),1)]\n",
     "        n2 = lady2[random.randrange(0,len(lady2),1)]\n",
     "        #print full name\n",
-    "        print(\"{}{} {}\".format(n1, n2,last))\n",
-    "        return [n1+n2, last]\n",
+    "        #print(\"{}{} {}\".format(n1, n2,last))\n",
+    "        return n1+n2, last\n",
     "        \n",
     "    if gender == 'm':\n",
     "        #creating first name\n",
     "        n3 = gent1[random.randrange(0,len(gent1),1)]\n",
     "        n4 = gent2[random.randrange(0,len(gent2),1)]\n",
     "        #print fullname\n",
-    "        print(\"{}{} {}\".format(n3, n4,last))\n",
-    "        return [n3+n4, last]\n",
+    "        #print(\"{}{} {}\".format(n3, n4,last))\n",
+    "        return n3+n4, last\n",
     "    \n",
     "    \n",
     "    \n",
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,21 +158,21 @@
     "        n1 = pref[random.randrange(0,len(pref),1)]\n",
     "        n2 = lady[random.randrange(0,len(lady),1)]\n",
     "        #print full name\n",
-    "        print(\"{}{} {}\".format(n1, n2,last))\n",
-    "        return [n1+n2, last]\n",
+    "        #print(\"{}{} {}\".format(n1, n2,last))\n",
+    "        return n1+n2, last\n",
     "        \n",
     "    if gender == 'm':\n",
     "        #creating first name\n",
     "        n3 = pref[random.randrange(0,len(pref),1)]\n",
     "        n4 = gent[random.randrange(0,len(gent),1)]\n",
     "        #print fullname\n",
-    "        print(\"{}{} {}\".format(n3, n4,last))\n",
-    "        return [n3+n4, last]"
+    "        #print(\"{}{} {}\".format(n3, n4,last))\n",
+    "        return n3+n4, last"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,26 +243,27 @@
     "            #creating first name\n",
     "            n3 = lady[subs][random.randrange(0,len(lady[subs]),1)]\n",
     "            #print full name\n",
-    "            print(\"{} {}\".format(n3,last2))\n",
-    "            return [n3, last2]\n",
+    "            #print(\"{} {}\".format(n3,last2))\n",
+    "            return n3, last2\n",
     "\n",
     "        if gender == 'm':\n",
     "            #creating first name\n",
     "            n4 = gent[subs][random.randrange(0,len(gent[subs]),1)]\n",
     "            #print fullname\n",
-    "            print(\"{} {}\".format(n4,last2))\n",
-    "            return [n4, last2]"
+    "            #print(\"{} {}\".format(n4,last2))\n",
+    "            return n4, last2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "def halfelf_name(gender):\n",
     "    #race basis for naming \n",
     "    halves = ['elf','human']\n",
+    "    \n",
     "    #random base for first and last names\n",
     "    half1 = halves[random.randrange(0,len(halves),1)]\n",
     "    half2 = halves[random.randrange(0,len(halves),1)]\n",
@@ -279,12 +280,12 @@
     "    elif half2 == 'human':\n",
     "        first = human_name(gender, sub=None)[0]\n",
     "        \n",
-    "    print(\"{} {}\".format(first, last))\n"
+    "    return first, last \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,34 +297,43 @@
     "        \n",
     "    else:\n",
     "        if race == 'dwarf':\n",
-    "            dwarf_name(gender)\n",
+    "            first, last = dwarf_name(gender)\n",
+    "            print(first, last)\n",
     "            \n",
     "        if race == 'elf':\n",
-    "            elf_name(gender)\n",
+    "            first, last = elf_name(gender)\n",
+    "            print(first, last)\n",
     "            \n",
     "        if race == 'human':\n",
-    "            human_name(gender, sub=hu_sub)\n",
+    "            first, last = human_name(gender, sub=hu_sub)\n",
+    "            print(first, last)\n",
     "            \n",
     "        if race == 'half-elf':\n",
-    "            halfelf_name(gender)"
+    "            first, last = halfelf_name(gender)\n",
+    "            print(first, last)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "THINK ABOUT HOW TO GET THE HALF ELF NAMES TO PRINT PROPERLY\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Faila Pisacar\n"
+      "LLedran Oakenflower\n"
      ]
     }
    ],
-   "source": [
-    "gen_name('human','f')"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
