--- a/DnD Helper.ipynb
+++ b/DnD Helper.ipynb
@@ -285,6 +285,49 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def dragonborn_name(gender):\n",
+    "    #list of first name prefixes\n",
+    "    pref = ['Arj','Ka','Bal','Bhar','Don','Ghe','Hes','Kri','Medr','Meh', 'Nad','Pandr','Pat','Rho',\n",
+    "            'Sham','Shed','Tar','Tor','Ak','Bir','Da','Far','Har','Hav','Jhe','Kor','Mish','Nal','Per',\n",
+    "            'Rai','Sor','Su','Tha','Uad']\n",
+    "    \n",
+    "    #list of female first name suffixes\n",
+    "    lady = ['ra','ri','a','ara','eh','ann','ilar','eri','ari','la','a','ina','jit','jita','elas']\n",
+    "    \n",
+    "    #list of male first name suffixes\n",
+    "    gent = ['han','asar','rash','v','aar','esh','kan','gar','ash','inn','n','hun','r','s','k']\n",
+    "    \n",
+    "    #list of surnames\n",
+    "    sur = ['Clethinthiallor','Daardendrian','Delmirev','Zagourachenk','Drachedandion','Fenkenkabradon',\n",
+    "          'Kepeshkmolik','Kerrhylon','Blutinvolor','Kimbatuul','Linxakasendalor','Myastan','Nemmonis',\n",
+    "           'Norixius','Ophinshtalajir','Prexijandilin','Shestendeliath','Turnoroth', 'Tunroc',\n",
+    "           'Verthisathurgiesh','Yarjerit','Atmanjith']\n",
+    "    \n",
+    "    #creating last name\n",
+    "    last = sur[random.randrange(0,len(sur),1)]\n",
+    "    \n",
+    "    #Choosing first name syllables\n",
+    "    n1 = pref[random.randrange(0,len(pref),1)]\n",
+    "    \n",
+    "    if gender == 'f':\n",
+    "        #creating first name\n",
+    "        n2 = lady[random.randrange(0,len(lady),1)]\n",
+    "        #print full name\n",
+    "        return n1+n2, last\n",
+    "        \n",
+    "    if gender == 'm':\n",
+    "        #creating first name\n",
+    "        n3 = gent[random.randrange(0,len(gent),1)]\n",
+    "        #print fullname\n",
+    "        return n1+n3, last"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 30,
    "metadata": {},
    "outputs": [],
@@ -310,14 +353,9 @@
     "            \n",
     "        if race == 'half-elf':\n",
     "            first, last = halfelf_name(gender)\n",
-    "            print(first, last)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "THINK ABOUT HOW TO GET THE HALF ELF NAMES TO PRINT PROPERLY\n"
+    "            print(first, last)\n",
+    "            \n",
+    "            "
    ]
   },
   {
