--- a/DnD Helper.ipynb
+++ b/DnD Helper.ipynb
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,9 +93,9 @@
     "    gent2 = ['', 'ur', 'g','men', 'in', 'dur','rn','tt', 'llick','gar', 'rik', \n",
     "             'rich', 'end','tor', 'unnar','kil', 'grimm', 'ech', 'gran', 'adin', 'ok']\n",
     "    #lists of surname in syllables\n",
-    "    sur1 = ['Stone', 'Gem', 'Obsidian','Rock', 'Lime', 'Hill','Oak','Gran','Steel','Sword','Axe', 'Spear']\n",
+    "    sur1 = ['Stone', 'Gem', 'Obsidian','Rock', 'Lime', 'Hill','Oak','Gran','Steel','Sword','Axe', 'Spear','Ton']\n",
     "    sur2 = ['grin', 'helm', 'granit', 'fist', 'sheild', 'stein', 'guard','breaker', '','hra', 'stronn',\n",
-    "            'gor','stromm']\n",
+    "            'gor','stromm','rock']\n",
     "    \n",
     "    #creating last name\n",
     "    last = sur1[random.randrange(0,len(sur1),1)]+sur2[random.randrange(0,len(sur2),1)]\n",
@@ -328,12 +328,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def gen_name(race, gender, hu_sub=None):\n",
-    "    races=['dwarf', 'elf', 'human', 'half-elf']\n",
+    "def tiefling_name(gender, virtue = None):\n",
+    "    #list of male names\n",
+    "    gent1 = ['Ak','Am','Bar','Bro','Dam','Dand','Ek','Ia','Kai','Leu','Mel',\n",
+    "             'Mor','Mat','Pel','Ska','The','Zhi']\n",
+    "    gent2 = ['menos','non','akas','akos','mon','dos','ron','cis','ech','ach',\n",
+    "             'dai','chai','thos','ios','mos','ai']\n",
+    "    \n",
+    "    #list of female names\n",
+    "    lady1 = ['Ak','Ana','Bry','Cri','Dam','E','Kal','Ler','Mak','Mara','Nem',\n",
+    "             'Ori','Phel','Ri','Ki','Ane','Sha', 'Xri']\n",
+    "    lady2 = ['ta','kis','seis','ella','aia','a','ena','lista','issa','aria',\n",
+    "             'eia','anna','aia','eta','ita','alta']\n",
+    "    \n",
+    "    #list of virtue names\n",
+    "    v = ['Art','Carrion','Chant','Creed','Despair','Excellence','Fear','Glory','Hope',\n",
+    "            'Ideal','Music','Nowhere','Open','Poetry','Quest','Random','Reverence','Sorrow',\n",
+    "            'Temerity','Torment','Weary', 'Courage','Bravery','Temperance','Magnificance',\n",
+    "            'Magnamity', 'Moderation','Magnificence','Magnanimity','Generosity','Ambition',\n",
+    "            'Pride','Patience','Calm','Truthfulness','Honesty','Wit','Humor','Modesty','Ego',\n",
+    "            'Justice','Indignation','Greed', 'Perserverance']\n",
+    "    \n",
+    "    if not virtue:\n",
+    "        \n",
+    "        if gender == 'm':\n",
+    "            n1 = gent1[random.randrange(0,len(gent1),1)]\n",
+    "            n2 = gent2[random.randrange(0,len(gent2),1)]\n",
+    "            return n1+n2\n",
+    "        \n",
+    "        if gender == 'f':\n",
+    "            n3 = lady1[random.randrange(0,len(lady1),1)]\n",
+    "            n4 = lady2[random.randrange(0,len(lady2),1)]\n",
+    "            return n3+n4\n",
+    "    elif virtue == 'yes':\n",
+    "        n5 = v[random.randrange(0,len(v),1)]\n",
+    "        return n5\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def gen_name(race, gender, hu_sub=None, virtue=None):\n",
+    "    races=['dwarf', 'elf', 'human', 'half-elf','dragonborn', 'tiefling']\n",
     "    \n",
     "    if race not in races:\n",
     "        print(\"That race is not yet supported.\")\n",
@@ -355,22 +420,37 @@
     "            first, last = halfelf_name(gender)\n",
     "            print(first, last)\n",
     "            \n",
-    "            "
+    "        if race == 'dragonborn':\n",
+    "            first, last = dragonborn_name(gender)\n",
+    "            print(first, last)    \n",
+    "        \n",
+    "        if race == 'tiefling':\n",
+    "            tief = tiefling_name(gender, virtue=virtue)\n",
+    "            print(tief)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "LLedran Oakenflower\n"
+      "Maklista\n"
      ]
     }
    ],
+   "source": [
+    "gen_name('tiefling','f', hu_sub=None, virtue= None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
