name generator complete

--- a/DnD Helper.ipynb
+++ b/DnD Helper.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -458,22 +458,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def halforc_name(gender):\n",
-    "    return None"
+    "def halforc_name(gender, flag='both'):\n",
+    "    \n",
+    "    gent1 = [\"Den\",\"Fe\",\"Ge\",\"Ho\",\"I\",\"Ke\",\"Kru\",\"Mhur\",\"Ro\",\"Shu\",\"Tho\"]\n",
+    "    gent2 = [\"ch\",\"ng\", \"ll\",\"lg\",\"msh\",\"th\",\"sk\",\"ren\",\"nt\",\"mp\",\"kk\"]\n",
+    "    \n",
+    "    lady1 = ['Bag','Em','Eng','Kan','My','Nee','Ov','Own','Shau','Su','Vo','Va','Yev']\n",
+    "    lady2 = ['gi','en','ong','sif','ev','ga','ak','ka','tha','thi','la','len','elda']\n",
+    "    \n",
+    "    #Human name \n",
+    "    if flag == 'human':\n",
+    "        first1, last1 = human_name(gender, sub=None)\n",
+    "        return first1, last1\n",
+    "\n",
+    "    #Orc Name\n",
+    "    if flag == 'orc':\n",
+    "    \n",
+    "        #Orcs do not use last or clan names\n",
+    "        \n",
+    "        if gender == 'm':\n",
+    "            first2 = gent1[random.randrange(0,len(gent1),1)]\n",
+    "            first3 = gent2[random.randrange(0,len(gent2),1)]\n",
+    "            last2 = \"\"\n",
+    "            return first2+first3, last2\n",
+    "        \n",
+    "        if gender == 'f':\n",
+    "            first4 =  lady1[random.randrange(0,len(lady1),1)]\n",
+    "            first5 =  lady2[random.randrange(0,len(lady2),1)]\n",
+    "            last3 = \"\"\n",
+    "            return first4+first5, last3\n",
+    "        \n",
+    "   #choosing an Orcish first name and a Human last name \n",
+    "    if flag == 'both':\n",
+    "                                                \n",
+    "        if gender == 'm':\n",
+    "            first6 =  gent1[random.randrange(0,len(gent1),1)]\n",
+    "            first7 = gent2[random.randrange(0,len(gent2),1)]\n",
+    "            last4 = human_name(gender, sub=None)[1]\n",
+    "            return first6+first7, last4\n",
+    "                           \n",
+    "        if gender == 'f':\n",
+    "            first8 =  lady1[random.randrange(0,len(lady1),1)]\n",
+    "            first9 =  lady2[random.randrange(0,len(lady2),1)]\n",
+    "            last5 = human_name(gender, sub=None)[1]\n",
+    "            return first8+first9, last5\n",
+    "    \n",
+    "    else:\n",
+    "        print(\"Please choose human, orc, or both for your flag.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def gen_name(race, gender, hu_sub=None, virtue=None):\n",
-    "    races=['dwarf', 'elf', 'human', 'half-elf','dragonborn', 'tiefling','halfling','gnome']\n",
+    "def gen_name(race, gender, hu_sub=None, virtue=None, flag='both'):\n",
+    "    races=['dwarf', 'elf', 'human', 'half-elf','dragonborn', 'tiefling','halfling','gnome','half-orc']\n",
     "    \n",
     "    if race not in races:\n",
     "        print(\"That race is not yet supported.\")\n",
@@ -509,73 +554,36 @@
     "            \n",
     "        if race == 'gnome':\n",
     "            first, nickname, last = gnome_name(gender)\n",
-    "            print(first,'\\'',nickname,'\\'' , last)"
+    "            print(first,'\\'',nickname,'\\'' , last)\n",
+    "        \n",
+    "        if race == 'half-orc':\n",
+    "            first, last = halforc_name(gender, flag=flag)\n",
+    "            print(first, last)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Erdy Greengallow\n"
+      "Krull  \n"
      ]
     }
    ],
    "source": [
-    "gen_name('halfling','m', hu_sub=None, virtue= None)"
+    "gen_name('half-orc','m', hu_sub=None, virtue= None,flag='orc')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Rerich Fallbarrow\n",
-      "Lylo Highbarrow\n",
-      "Clo Teagallow\n",
-      "Wellnan Leabough\n",
-      "Rosnan Copperbarrow\n",
-      "Welldy Greenbough\n",
-      "Errin Coppertopple\n",
-      "Eldy Greengage\n",
-      "Finnret Brushbarrel\n",
-      "Pipby Undergallow\n"
-     ]
-    }
-   ],
-   "source": [
-    "ex = []\n",
-    "\n",
-    "for i in range(0,10):\n",
-    "    ex.append(gen_name('halfling','m'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Choose a number between 1 and 501\n",
-      "499\n",
-      "Your Stats are: [11, 13, 14, 14, 14, 17]\n"
-     ]
-    }
-   ],
-   "source": [
-    "roll_stats()"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
